@@ -81,7 +81,10 @@ class IMDB(Content.Content):
     '''
     sourceWeight = 2
 
-    def isLabel(self):
+    def isTracker(self):
+        return False
+
+    def isSearcher(self):
         return False
 
     def isPages(self):
