@@ -50,8 +50,11 @@ class KickAssSo(Content.Content):
     '''
     sourceWeight = 1
 
-    def isLabel(self):
+    def isTracker(self):
         return True
+
+    def isSearcher(self):
+        return False
 
     def isScrappable(self):
         return False
