@@ -87,7 +87,10 @@ class KinoPoisk(Content.Content):
     '''
     sourceWeight = 2
 
-    def isLabel(self):
+    def isTracker(self):
+        return False
+
+    def isSearcher(self):
         return False
 
     def isPages(self):
