@@ -1,5 +1,8 @@
 ﻿[B]Version 2.3.2[/B]
 [+] Control Center: Исправлена работа без серчеров
+[+] Списки Медиа: Проверка отсутствия серчера
+[+] Списки Медиа: Исправлен ThePirateBay
+[+] Торрент-клиент: Добавлена возможность указать путь Deluge
 
 [B]Version 2.3.1[/B]
 [+] Загрузка: Исправлена ошибка удаления базы данных
